Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17793

Regression, Renaming a "folder with dots" makes smartass-renaming choke

    XMLWordPrintable

Details

    Description

      Try to rename a file/folder in explorer-filebrowser by pressing F2

      If you rename a file in Windows XP, the explorer will always select the whole filename including the files extension.
      If you rename a file in Windows 7, the explorer will only select the filename but without the extension. That is to protect your grandma from accidently changing the extension as well. Let's call this feature "smartass-renaming".

      "smartass-renaming" was recently implemented in ReactOS as well and is the new default.

      Observed result
      Unfortunately "smartass-renaming" in ros also erroneously tries to exclude the extension when you try to rename a folder, which makes absolutely no sense
      try it by pressing F2 over a folder called "LGeneral-1.4.4-win32"
      0.4.14-RC-101-g065e47d_renaming_folder_multidots.png
      0.4.14-RC-101-g065e47d_renaming_folder_multidots.log (nothing interesting)

      Expected result
      "smartass-renaming" should be limited to files, and should not get active when renaming folders
      win7_does_not_smartass_on_folders__just_on_files.webm

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              reactosfanboy reactosfanboy
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: