[SHELL32] Don't smartass-renaming on folders (#3993)

Selection on renaming folders shouldn't select the extension-like part of filename.
CORE-17793